--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
   height: 100%;
 }
 .navbarContainer {
+  width: 100%;
+  /* position: fixed; */
   display: flex;
   justify-content: space-between;
   background-color: #000000;
@@ -29,20 +31,20 @@ body {
   padding: 1%;
   background-color: #000000;
   border: none;
-  border-right: 2px solid #d9cab3;
-  border-left: 2px solid #d9cab3;
+  border-right: 2px solid #ffbb56;
+  border-left: 2px solid #ffbb56;
   color: white;
   font-size: 130%;
 }
 .btn:hover {
-  color: #000000;
-  background-color: #d9cab3;
+  color: #34499a;
+  background-color: #ffbb56;
   transition: all 1000ms ease;
   cursor: pointer;
 }
 .content {
   height: 100%;
-  background-color: #f6f6f6;
+  background-color: #ffbb56;
   display: none;
 }
 #content-home {
@@ -51,18 +53,22 @@ body {
 
 .heading {
   text-align: center;
-  color: #212121;
+  color: black;
   padding: 3%;
   font-size: 300%;
 }
+img {
+  width: 100%;
+  height: 90%;
+}
 
 .list {
-  width: 70%;
-  margin-left: 15%;
+  width: 50%;
+  margin-left: 25%;
   font-size: 150%;
 }
 li {
-  padding: 5% 0%;
+  padding: 2% 0%;
 }
 
 form {
@@ -84,9 +90,13 @@ input {
   margin: 3%;
   padding: 1%;
   border-radius: 10px;
-  border: 2px solid #d9cab3;
+  border: 2px solid #34499a;
   background-color: #212121;
   margin-left: 25%;
-  color: #d9cab3;
+  color: #34499a;
   font-size: 150%;
+}
+
+#yt_submit {
+  display: none;
 }
