--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
         font-style: normal;
       }
     </style>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/style.css" />
   </head>
 
   <body>
@@ -158,7 +158,7 @@
         <h1 class="heading">Diabetes Detection</h1>
 
         <!-- Main Input For Receiving Query to our ML -->
-        <form action="{{ url_for('predict')}}" method="post">
+        <form action="{{ url_for('predict_diabetes')}}" method="post" onsubmit="return false">
           <input
             type="text"
             name="Pregnancies"
@@ -192,7 +192,7 @@
 
         <br />
         <br />
-        {{ prediction_text }}
+        {{ diabetes_prediction }}
       </div>
     </div>
 
@@ -201,7 +201,7 @@
         <h1 class="heading">Heart Disease Detection</h1>
 
         <!-- Main Input For Receiving Query to our ML -->
-        <form action="{{ url_for('predict')}}" method="post">
+        <form action="{{ url_for('predict_heart')}}" method="post">
           <input type="text" name="age" placeholder="age" required />
 
           <input type="text" name="anaemia" placeholder="anaemia" required />
@@ -258,7 +258,7 @@
 
           <button type="submit" class="heart-btn">Predict</button>
         </form>
-        {{ prediction_text }}
+        {{ heart_prediction }}
       </div>
     </div>
 
@@ -290,5 +290,5 @@
     <!-- <p id="page"></p> -->
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="./script.js"></script>
+  <script src="../static/script.js"></script>
 </html>
