Added whatsapp API

--- a/static/style.css
+++ b/static/style.css
@@ -100,3 +100,24 @@ input {
 #yt_submit {
   display: none;
 }
+
+#whatsapp_msg {
+  font-size:xx-large;
+  font-weight: bold;
+  text-align: center;
+  border: 5 solid green;
+}
+
+.send_msg {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border: 5 solid black;
+  background-color: greenyellow;
+  text-align: center; 
+  width: 10%; 
+  height: 5%;
+}
