--- a/templates/index.html
+++ b/templates/index.html
@@ -254,6 +254,7 @@
 
   <div id="content-contact" class="content">
     <h1 class="heading">Emergency Contact Page</h1>
+    <a id='send_msg' href="https://wa.me/919110389277/?text=emergency contact" target="_blank"><button class='send_msg'>Send</button></a>
   </div>
 
   <!-- <p id="page"></p> -->
