--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,8 @@ a:hover {
   text-align: center;
   color: black;
   padding: 3%;
-  font-size: 300%;
+  font-size: 250%;
+  font-family: "Montagu Slab", serif;
 }
 img {
   width: 100%;
@@ -82,15 +83,23 @@ form {
   width: 100%;
 }
 
+.formWrapper {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 15%;
+}
+
 input {
   padding: 1%;
   margin: 0.5%;
-  width: 50%;
-  margin-left: 25%;
+  width: 45%;
+  margin-left: 2.5%;
   border: 0.5px solid #212121;
   border-radius: 10px;
   display: block;
 }
+
 .heart-btn,
 .diabetes-btn {
   width: 50%;
@@ -100,8 +109,15 @@ input {
   border: 2px solid #34499a;
   background-color: #212121;
   margin-left: 25%;
-  color: #34499a;
+  color: #ffbb56;
   font-size: 150%;
+}
+.heart-btn:hover,
+.diabetes-btn:hover {
+  background-color: #34499a;
+  color: white;
+  cursor: pointer;
+  transition: all 1000ms ease;
 }
 
 #yt_submit {
