--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,7 @@
       href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@300&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="static\Blinkerz.png" type="image/x-icon">
   </head>
 
   <body>
