Fixed heart training loop

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
       arr[3].style.display = "none";
       arr[4].style.display = "none";
       arr[2].style.height = "150%";
-      if (diabetes_bool != 1) {
+      if (heart_bool != 1) {
         setTimeout(() => {
           heart_values();
         }, 1000);
